[package]
name = "gix-sha1-asm-reproduction"
version = "0.1.0"
edition = "2021"
license = "Apache"

publish = false

[dependencies]
gix = { version = "0.48.0", features = ["blocking-http-transport-reqwest-rust-tls", "max-performance"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
lto = false
debug-assertions = true
overflow-checks = true
codegen-units = 1024

[profile.dev.build-override]
inherits = "dev"
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[profile.release.build-override]
inherits = "dev.build-override"
